[#1139] Prevent breakpoint markers from being deleted